--- a/Python3_for_data_engineer_by_Prashant_kumar_pandey/coding-challange-03.ipynb
+++ b/Python3_for_data_engineer_by_Prashant_kumar_pandey/coding-challange-03.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
    "source": [
     "grocery_items = ''' Grated Cheese, Coffee Powder, Pickles\n",
     "White Chocolate, Dark Chocolate, Eggs, Breads, Milk,\n",
-    "Sugar, Salt, Cat Food, Fries'''\n",
+    "Sugar, Salt, Cat Food, Fries '''\n",
     "\n",
     "items = grocery_items.replace('/n','').split(',')\n",
     "# print(items)\n",
@@ -168,6 +168,29 @@
     "\n",
     "result = ', '.join(sorted_items)\n",
     "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Breads, Cat Food, Coffee Powder, Dark Chocolate, Eggs, Fries, Grated Cheese, Milk, Pickles White Chocolate, Salt, Sugar\n"
+     ]
+    }
+   ],
+   "source": [
+    "grocery_items = ' Grated Cheese, Coffee Powder, Pickles\\\n",
+    " White Chocolate, Dark Chocolate, Eggs, Breads, Milk,\\\n",
+    " Sugar, Salt, Cat Food, Fries'\n",
+    "\n",
+    "items = [x for x in grocery_items.split(',')]\n",
+    "items.sort()\n",
+    "print (','.join(items))"
    ]
   },
   {
@@ -248,6 +271,33 @@
     "print(\"Completed Applications:\",com)\n",
     "pen = roll_numbers - com\n",
     "print(\"Pending Applications\",pen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completed Applications:  {12, 30, 23}\n",
+      "Pending Applications:  {32, 15, 7}\n"
+     ]
+    }
+   ],
+   "source": [
+    "roll_numbers = {12, 7, 15, 23, 32, 30}\n",
+    "student_details = {12:'Judy', 30:'Shane', 23:'Aaron'}\n",
+    "\n",
+    "completed_roll_numbers = {item for item in roll_numbers if item in student_details.keys()}\n",
+    "\n",
+    "print(\"Completed Applications: \", completed_roll_numbers)\n",
+    "\n",
+    "pending_roll_numbers = roll_numbers - completed_roll_numbers\n",
+    "\n",
+    "print(\"Pending Applications: \", pending_roll_numbers)"
    ]
   },
   {
@@ -382,16 +432,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200, 202, 204, 206, 208, 220, 222, 224, 226, 228, 240, 242, 244, 246, 248, 260, 262, 264, 266, 268, 280, 282, 284, 286, 288\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_values = []\n",
+    "\n",
+    "for i in range(100, 301):\n",
+    "    num_string = str(i)\n",
+    "    \n",
+    "    if (int(num_string[0])%2==0) and (int(num_string[1])%2==0) and (int(num_string[2])%2==0) :\n",
+    "        num_values.append(num_string)\n",
+    "        \n",
+    "print (\", \".join(num_values))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200, 202, 204, 206, 208, 220, 222, 224, 226, 228, 240, 242, 244, 246, 248, 260, 262, 264, 266, 268, 280, 282, 284, 286, 288\n"
+     ]
+    }
+   ],
    "source": [
     "result = []\n",
-    "for digits in range(100,301):\n",
-    "    s= str(digits)\n",
+    "for i in range(100,301):\n",
+    "    s= str(i)\n",
+    "    \n",
     "    if all(int(i)%2==0 for i in s):\n",
-    "        result.append(digits)\n",
-    "print(result)"
+    "        result.append(s)\n",
+    "        \n",
+    "print(\", \".join(result))"
    ]
   },
   {
@@ -422,10 +507,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Lara', 'Lily', 'Ericson', 'Rick', 'Joanna', 'Michael'}\n",
+      "{'Lara', 'Lily', 'Ericson', 'Rick', 'Joanna', 'Michael'}\n",
+      "{'Lara', 'Lily', 'Ericson', 'Rick', 'Joanna', 'Michael'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "passenger_list = {'Ross'    : 35,\n",
+    "                  'Thomas'  : 42,\n",
+    "                  'Rick'    : 55,\n",
+    "                  'Ericson' : 51,\n",
+    "                  'Josh'    : 45,\n",
+    "                  'Lara'    : 50,\n",
+    "                  'Emma'    : 38,\n",
+    "                  'Lily'    : 46,\n",
+    "                  'Ron'     : 41,\n",
+    "                  'Michael' : 47,\n",
+    "                  'Joanna'  : 56,\n",
+    "                  'Arthur'  : 42}\n",
+    "\n",
+    "senior_citizens = {key for key in passenger_list if passenger_list[key]>45}\n",
+    "print(senior_citizens)\n",
+    "\n",
+    "senior_citizens = {key for (key,value) in passenger_list.items() if value>45}\n",
+    "print(senior_citizens)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -446,10 +560,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sub-List 1 [31, 24, 2]\n",
+      "Sub-List 2 [16, 19, 45]\n",
+      "Sub-List 3 [75, 63, 79]\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_list = [31, 24, 2, 16, 19, 45, 75, 63, 79]\n",
+    "print(\"Sub-List 1\", num_list[0:3])\n",
+    "print(\"Sub-List 2\", num_list[3:6])\n",
+    "print(\"Sub-List 3\", num_list[6:])"
+   ]
   }
  ],
  "metadata": {
