--- a/Python3_for_data_engineer_by_Prashant_kumar_pandey/practice-exercise-06.ipynb
+++ b/Python3_for_data_engineer_by_Prashant_kumar_pandey/practice-exercise-06.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Practice Exercise - 06 - Solution"
+    "# Practice Exercise - 06"
    ]
   },
   {
@@ -24,28 +24,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_num(num):\n",
+    "    if num in range(5,11):\n",
+    "        return(f\"{num} is present between 5-10\")\n",
+    "    else:\n",
+    "        return(f\"{num} is not present in between 5-10\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7 is present between 5-10.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'7 is present between 5-10'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "num = 7\n",
-    "\n",
-    "def num_range_check(x):\n",
-    "    \n",
-    "    if x in range(5, 11):\n",
-    "        print(f'{str(x)} is present between 5-10.')\n",
-    "    else :\n",
-    "        print(f'{str(x)} is not present between 5-10.')\n",
-    "        \n",
-    "num_range_check(num)"
+    "check_num(7)"
    ]
   },
   {
@@ -63,23 +70,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def arithmatic_operation(x,y):\n",
+    "    return x+y, x-y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(Addition, Substraction) :  (50, 30)\n"
+      "(Addition, Substarction): (50, 30)\n"
      ]
     }
    ],
    "source": [
-    "def arithematic_operations(x, y):\n",
-    "    return x + y, x - y\n",
-    "\n",
-    "result = arithematic_operations(40, 10)\n",
-    "print(\"(Addition, Substraction) : \", result)"
+    "result = arithmatic_operation(40,10)\n",
+    "print(\"(Addition, Substarction):\",result)"
    ]
   },
   {
@@ -98,7 +112,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def candidate_result(name,result=\"Pass\"):\n",
+    "    return (f\"{name} is {result}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -111,11 +135,8 @@
     }
    ],
    "source": [
-    "def exam_results(name, results = \"Pass\"):\n",
-    "    print(f'{name} is {results}.')\n",
-    "    \n",
-    "exam_results(\"Sam\")\n",
-    "exam_results(\"Judy\", \"Fail\")"
+    "print(candidate_result(\"Sam\"))\n",
+    "print(candidate_result(\"Judy\",\"Fail\"))"
    ]
   },
   {
@@ -135,7 +156,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def odd_indexed(*numList):\n",
+    "    print(numList[1::2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -148,10 +179,6 @@
    ],
    "source": [
     "n = [2, 3, 5, 6, 8, 9]\n",
-    "\n",
-    "def odd_indexed(*num):    \n",
-    "    print(num[1::2])\n",
-    "\n",
     "odd_indexed(*n)"
    ]
   },
@@ -172,7 +199,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = []\n",
+    "def alphabet_checks(*country):\n",
+    "    for i in country:\n",
+    "        if i.startswith('A'):\n",
+    "            result.append(i)\n",
+    "        else:\n",
+    "            pass\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -184,18 +227,7 @@
     }
    ],
    "source": [
-    "result = []\n",
-    "\n",
-    "def alphabet_check(*countries):\n",
-    "    \n",
-    "    for x in countries:\n",
-    "        \n",
-    "        if x.startswith('A'):\n",
-    "            result.append(x)\n",
-    "        else:\n",
-    "            pass\n",
-    "        \n",
-    "alphabet_check('Austraiia', 'India', 'Austria', 'America', 'Russia', 'Iran')\n",
+    "alphabet_checks('Austraiia', 'India', 'Austria', 'America', 'Russia', 'Iran')\n",
     "print(result)"
    ]
   },
@@ -216,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -229,9 +261,7 @@
    ],
    "source": [
     "candidate_details = [('Harry', 168), ('Jhonny', 160), ('Brad', 178), ('Chris', 172)]\n",
-    "\n",
-    "candidate_details.sort(key = lambda x: x[1])\n",
-    "\n",
+    "candidate_details.sort(key=lambda x:x[1])\n",
     "print(candidate_details)"
    ]
   },
@@ -252,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -264,12 +294,13 @@
     }
    ],
    "source": [
-    "map_details = {'Park': 101, 'Zoo':102, 'Mall':103}\n",
+    "def find(dictionary):\n",
+    "    for i,j in dictionary.items():\n",
+    "        if j == \"Mall\":\n",
+    "            print(i)\n",
     "\n",
-    "def find(**dict_1):\n",
-    "    print(dict_1['Mall'])\n",
-    "    \n",
-    "find(**map_details)"
+    "map_details = {101:'Park', 102:'Zoo', 103:'Mall'}\n",
+    "find(map_details)"
    ]
   },
   {
@@ -291,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -307,9 +338,8 @@
     "list_2 = [3, 2, 5]\n",
     "list_3 = [2, 3, 6]\n",
     "\n",
-    "result = map(lambda x, y, z: x + y + z, list_1, list_2, list_3) \n",
-    "\n",
-    "print('Resultant List:', list(result))"
+    "result = map(lambda x,y,z:x+y+z, list_1,list_2,list_3)\n",
+    "print(\"Resultant List:\",list(result))"
    ]
   },
   {
@@ -329,24 +359,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Name:  Brandon - Subjects:  {'Chemistry', 'English', 'Mathematics'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "def marks_check(name = None, **subject_marks):\n",
-    "    res = {subject_name for (subject_name, marks) in subject_marks.items() if marks > 60}\n",
-    "    print(\"Name: \", name,\"- Subjects: \", res)\n",
-    "    \n",
-    "marks_check(name = 'Brandon', Mathematics = 80, Physics = 58, Chemistry = 62, English = 72, Biology = 50)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -365,26 +381,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2008\n"
-     ]
-    }
-   ],
-   "source": [
-    "from datetime import datetime\n",
-    "\n",
-    "given_date = datetime(2008, 6, 12, 10, 30, 0)\n",
-    "\n",
-    "year = lambda x : x.year\n",
-    "\n",
-    "print(year(given_date))"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
