--- a/Python3_for_data_engineer_by_Prashant_kumar_pandey/Python-Foundation-Course-main/coding-challange-03-solution.ipynb
+++ b/Python3_for_data_engineer_by_Prashant_kumar_pandey/Python-Foundation-Course-main/coding-challange-03-solution.ipynb
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -381,14 +381,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Rick', 'Lily', 'Ericson', 'Joanna', 'Michael', 'Lara'}\n"
+      "{'Michael', 'Lily', 'Joanna', 'Lara', 'Rick', 'Ericson'}\n"
      ]
     }
    ],
@@ -465,7 +465,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -479,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
