--- a/Python3_for_data_engineer_by_Prashant_kumar_pandey/practice-exercise-06.ipynb
+++ b/Python3_for_data_engineer_by_Prashant_kumar_pandey/practice-exercise-06.ipynb
@@ -359,10 +359,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 160,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Brandon - Subjects: {'Mathematics', 'English', 'Chemistry'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def result(name=None,**subjectmarks):\n",
+    "    res = {subname for (subname,marks) in subjectmarks.items() if marks>60}\n",
+    "    print(\"Name:\",name,\"- Subjects:\", res)\n",
+    "    \n",
+    "result(name=\"Brandon\",Mathematics = 80, Physics = 58, Chemistry = 62, English = 72, Biology = 50)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -378,6 +392,54 @@
     "\n",
     "2008"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2008\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "given_date =datetime(2008, 6, 12, 10, 30, 0)\n",
+    "year = lambda x:x.year\n",
+    "print(year(given_date))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2008\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "given_date =datetime(2008, 6, 12, 10, 30, 0)\n",
+    "print(given_date.year)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
